some style fixes

--- a/web/src/components/pages/mainPage/components/info/style.css
+++ b/web/src/components/pages/mainPage/components/info/style.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     margin: 40px auto;
     width: 90%;
     padding-top: 30px;
@@ -14,4 +15,10 @@
     align-items: center;
     justify-content: center;
     font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+    .info {
+        justify-content: center;
+    }
 }
