--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,7 +14,7 @@
     --box-shadow1: rgba(58, 58, 68, 0.24);
     --box-shadow2: rgba(90, 91, 106, 0.24);
     --navigation-text: #787885;
-    --navigation: #0C2146;
+    --navigation: #173e81;
     --badge: #F44336;
     --input-border: #CCC;
     --product-title: #19191D;
