--- a/web/src/components/shared/footer/style.css
+++ b/web/src/components/shared/footer/style.css
@@ -27,6 +27,7 @@
 .footer__row1__currency-language {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .footer__social-item {
@@ -39,6 +40,7 @@
     color: var(--navigation);
     font-weight: 700;
     font-size: 13px;
+    white-space: nowrap;
 }
 
 .footer__label {
