--- a/web/src/components/shared/popup/style.css
+++ b/web/src/components/shared/popup/style.css
@@ -9,6 +9,7 @@
     right: 0;
     background: rgba(0, 0, 0, 0.7);
     transition: opacity 500ms;
+    z-index: 99999999;
 }
 
 .popup {
@@ -22,13 +23,13 @@
     margin: 70px auto;
     padding: 15px;
     background: #fff;
-    border-radius: 5px 0px 5px 5px;
+    border-radius: 5px;
     box-shadow: 0px 0px 24px -13px var(--green-dark);
 }
 
 .popup__header {
     width: 100%;
-    text-align: end;
+    text-align: start;
     font-size: 2em;
     border-bottom: 1px solid #dadada;
     padding-bottom: 15px;
@@ -50,11 +51,8 @@
 
 .popup__close {
     position: absolute;
-    top: -1.2em;
-    right: 0px;
-    padding: 0.1em;
-    border-radius: 5px 5px 0px 0px;
-    background-color: white;
+    top: 13px;
+    right: 13px;
     text-align: center;
     font-size: 1em;
     height: 1.3em;
