--- a/web/src/components/shared/button/style.css
+++ b/web/src/components/shared/button/style.css
@@ -81,6 +81,7 @@
     background: var(--main-background);
     border: 1px solid var(--buttons-light);
     color: var(--buttons-light);
+    text-decoration: none;
 }
 
 .button--secondary:hover {
