--- a/web/src/components/pages/loginPage/style.css
+++ b/web/src/components/pages/loginPage/style.css
@@ -3,13 +3,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: aqua;
-    background: url("https://prezentokracja.pl/media/catalog/product/optimized/d/8/d8a0d47495cd242e35b9c6143b986db1/spadochrony-skoki-tandemowe.jpg") 
-    no-repeat  center ;
+    background-color: var(--main-background);
+    /* background: url("https://prezentokracja.pl/media/catalog/product/optimized/d/8/d8a0d47495cd242e35b9c6143b986db1/spadochrony-skoki-tandemowe.jpg")  */
+    /* no-repeat  center ; */
 }
 
 .login__form{
-    height: 370px;
+    height: 400px;
     width: 325px;
     background-color: white;
     margin-top: 50px;
@@ -27,17 +27,19 @@
     color: var(--green-main);
 }
 .register__form__input{
-    
+    color: black;
     width:250px;
     height: 50px;
     margin: 10px 20px 10px 10px;
     border-radius: 5px;
     padding: 8px 8px 8px 8px;
     font-size: medium;
-    border-color: var(--green-main);
 }
-
+.down__input{
+    margin-bottom: 20px;
+}
 .login__info{
+    margin-top: 20px;
     color: var(--green-main);
     text-decoration: none none;
 }
