--- a/web/src/components/pages/mainPage/components/mainPageCarousel/style.css
+++ b/web/src/components/pages/mainPage/components/mainPageCarousel/style.css
@@ -1,6 +1,8 @@
 .mainPageCarouselItem__container {
     position: relative;
-    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainPageCarouselItem__img {
@@ -17,10 +19,6 @@
     transition: 0.5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     text-align: center;
     width: 12rem;
 }
@@ -35,5 +33,5 @@
 
 .mainPageCarouselItem__txt {
     font-size: 20px;
-    color: #04aa6d;
+    color: var(--product-description);
 }
