ps-109 Added changes to bestsellers page

--- a/web/src/components/pages/productsPage/style.css
+++ b/web/src/components/pages/productsPage/style.css
@@ -22,6 +22,7 @@
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 .products__page__items {
