--- a/web/src/components/pages/mainPage/components/bestComponent/style.css
+++ b/web/src/components/pages/mainPage/components/bestComponent/style.css
@@ -5,7 +5,6 @@
 }
 
 .best__container {
-
 }
 
 .best__items {
@@ -24,4 +23,5 @@
     text-align: center;
     font-weight: bold;
     color: var(--navigation);
+    text-transform: uppercase;
 }
