--- a/web/src/components/pages/registerPage/style.css
+++ b/web/src/components/pages/registerPage/style.css
@@ -4,13 +4,11 @@
     align-items: center;
     flex-direction: column;
     background-color: var(--main-background);
-    /* background: url("https://prezentokracja.pl/media/catalog/product/optimized/d/8/d8a0d47495cd242e35b9c6143b986db1/spadochrony-skoki-tandemowe.jpg") 
-    no-repeat  center ; */
 }
 
 .register__form{
     height: 500px;
-    width: 325px;
+    width: 375px;
     background-color: white;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -18,9 +16,9 @@
     flex-direction: column;
     align-items: center;
     border-radius: 7px;
-    -webkit-box-shadow: 8px 8px 24px -10px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 8px 8px 24px -10px rgba(66, 68, 90, 1);
-    box-shadow: 8px 8px 24px -10px rgba(66, 68, 90, 1);
+    -webkit-box-shadow: 8px 8px 24px -10px var(--box-shadow2);
+    -moz-box-shadow: 8px 8px 24px -10px var(--box-shadow2);
+    box-shadowŔ: 8px 8px 24px -10px var(--box-shadow2);
 }
 .register__form__header{
     margin: 20px 10px 10px 10px;
