--- a/web/src/components/pages/productsPage/components/style.css
+++ b/web/src/components/pages/productsPage/components/style.css
@@ -1,4 +1,4 @@
-.products__page-container {
+.products__container {
     margin-left: 100px;
     margin-right: 100px;
     display: flex;
@@ -6,18 +6,18 @@
     flex-wrap: nowrap;
 }
 
-.products__page-container-left {
+.products__container--left {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     width: 355px;
 }
 
-.products__page-container-right {
+.products__container--right {
     width: 100%;
 }
 
-.products__page__items {
+.products__items {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -26,19 +26,19 @@
     border-radius: 8px;
 }
 
-.products-page__filter {
+.products__filter {
     margin-top: 50px;
     padding-right: 45px;
     display: inline-block;
     position: relative;
 }
 
-.products-page__filter-button {
+.products__filter__btn {
     border: 0;
     outline: 0;
 }
 
-.products-page__filter-name {
+.products__filter__name {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -53,7 +53,7 @@
     cursor: pointer;
 }
 
-.products-page__filter-name-dropdown {
+.products__filter__dropdown__name {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -67,21 +67,21 @@
     cursor: pointer;
 }
 
-.products-page__filter-arrow {
+.products__filter__arrow {
     margin-left: auto;
     margin-right: 24px;
     color: var(--icons);
     font-size: 12px;
 }
 
-.products-page__filter-dropdown {
+.products__filter__dropdown {
     top: 100%;
     left: 0;
     width: 310px;
     background: var(--secondary-background);
 }
 
-.products-page__filter-dropdown-list {
+.products__filter__dropdown__list {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -92,7 +92,7 @@
     padding-right: 45px;
 }
 
-.search-price-button {
+.search__price__button {
     margin: 10px;
     height: 40px;
     border: 1px solid var(--input-border);
@@ -101,7 +101,7 @@
     width: 120px;
 }
 
-.size-checkbox {
+.size__checkbox {
     margin-left: 10px;
     padding: 5px;
 }
