--- a/web/src/components/shared/button/style.css
+++ b/web/src/components/shared/button/style.css
@@ -12,6 +12,8 @@
     line-height: 143%;
     letter-spacing: 0.018em;
     cursor: pointer;
+        margin: 7px 7px 7px 7px;
+
 }
 
 /* BUTTON PRIMARY */
