--- a/web/src/components/shared/spinner/style.css
+++ b/web/src/components/shared/spinner/style.css
@@ -1,4 +1,4 @@
-.spinner {
+.spinner--primmary {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -11,6 +11,18 @@
     border-radius: 100%;
 
     animation: spin 1s infinite linear;
+}
+
+.spinner--primarySmall{
+    transform: translate(-50%, -50%);
+    width: 1em;
+    height: 1em;
+
+    border: 1px solid var(--secondary-background);
+    border-top: 2px solid var(--icons);
+    border-radius: 100%;
+    animation: spin 1s infinite linear;
+
 }
 
 @keyframes spin {
