--- a/web/src/components/shared/Form/style.css
+++ b/web/src/components/shared/Form/style.css
@@ -1,12 +1,4 @@
-.register {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: var(--main-background);
-}
-
-.register__form {
+.form {
     width: 375px;
     background-color: white;
     margin-top: 30px;
@@ -21,7 +13,7 @@
     padding: 25px 13px;
 }
 
-.register__form__header {
+.form__header {
     margin: 20px 10px 10px 10px;
     color: var(--green-main);
 }
