ps-108 Added next steps for payment

--- a/web/src/components/shared/Spinner/style.css
+++ b/web/src/components/shared/Spinner/style.css
@@ -1,15 +1,11 @@
 .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 80px;
     height: 80px;
 
     border: 2px solid var(--main-background);
     border-top: 3px solid var(--icons);
     border-radius: 100%;
-
+    margin: auto;
     animation: spin 1s infinite linear;
 }
 
