Add Muliselect Checkbox component

--- a/web/src/components/pages/Products/ProductsContainer/style.css
+++ b/web/src/components/pages/Products/ProductsContainer/style.css
@@ -141,7 +141,7 @@
     height: 30px;
 }
 
-input[type=checkbox]:checked ~ div {
+.checked {
     background-color: var(--buttons-light);
     color: var(--main-background);
     font-weight: 700;
