--- a/web/src/components/shared/Navigation/style.css
+++ b/web/src/components/shared/Navigation/style.css
@@ -24,6 +24,7 @@
 .main-nav > ul {
     display: flex !important;
     flex-wrap: wrap;
+    margin-left: 10px;
 }
 
 .main-nav ul {
@@ -66,6 +67,14 @@
     margin-left: 8px;
     color: var(--icons);
     font-size: 12px;
+}
+
+.nav-logo {
+    display: flex;
+    flex-direction: row;
+    min-width: 300px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-logo-img {
@@ -119,6 +128,72 @@
     color: var(--main-background);
 }
 
+li .nav-menu {
+    min-width: 40px;
+}
+
+.nav-menu {
+    display: none;
+    justify-content: flex-end;
+    align-items: center;
+    height: 25px;
+    width: 32px;
+}
+
+.hamburger-lines {
+    height: 25px;
+    width: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: .5s ease;
+}
+
+.nav-menu input {
+    position: absolute;
+    opacity: 0;
+    height: 25px;
+    width: 32px;
+}
+
+.hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: var(--navigation);
+}
+
+.hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+}
+
+.hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+}
+
+.hamburger-lines .line3 {
+    transform-origin: 0 100%;
+    transition: transform 0.4s ease-in-out;
+}
+
+.nav-menu input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+}
+
+.nav-menu input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+}
+
+.nav-menu input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+}
+
+.nav-menu input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+}
+
 @media only screen and (max-width: 768px) {
     .main-nav {
         flex-direction: column;
@@ -126,5 +201,19 @@
 
     .main-nav li {
         width: 100%;
+    }
+
+    .nav-menu {
+        display: flex;
+        padding-right: 10px;
+    }
+
+    .nav-item-hide {
+        display: none;
+    }
+
+    .submenu > li:hover > .submenu {
+        left: 0;
+        top: 100%;
     }
 }
